# capcore-m1

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  reference-monitor-demo.html
.github/workflows/: ci.yml
capcore/: MODEL.md  __init__.py  adapters.py  broker.py  httptool.py  runtime.py
capcore/tests/: strategies.py  test_adapters.py  test_broker.py  test_httptool.py  test_integration_m2_m3.py  test_m2_m3_trust_boundaries.py  test_mutation_harness.py  test_properties.py  test_review10_hardening.py  test_review3_hardening.py  test_review4_hardening.py  test_review5_hardening.py  test_review6_hardening.py  test_review7_hardening.py  test_review8_hardening.py  test_review9_hardening.py  test_runtime.py  test_scenario.py  test_security_regressions.py
scripts/: check_stale.py  demo_live.py  demo_live_m3.py  mutation_check.py
