[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capcore"
version = "0.1.0"
description = "capcore: a capability-enforced agent runtime (M1 monitor, M2 execution loop, M3 trusted execution broker)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]
# The live LLM path (Ollama adapter) needs requests. It is NOT required for the
# test suite or CI, which never make network calls.
live = [
    "requests>=2.28",
]

[tool.setuptools]
packages = ["capcore", "capcore.tests"]

[tool.pytest.ini_options]
testpaths = ["capcore/tests"]
addopts = "-q"
